fix navbar positioning
fix navbar positioning so it does not overlap with content.

--- a/src/style.css
+++ b/src/style.css
@@ -10,9 +10,6 @@ body{
 }
 
 ul{
-  position: fixed; /* Set the navbar to fixed position */
-  top: 0;
-  width:100%;
   list-style-type: none;
   margin: 0;
   padding: 10px;
